k8s/workloads/default/template/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: template
  labels:
    app.kubernetes.io/name: template
    app.kubernetes.io/part-of: template
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: template
      app.kubernetes.io/part-of: template
  template:
    metadata:
      labels:
        app.kubernetes.io/name: template
        app.kubernetes.io/part-of: template
    spec:
      imagePullSecrets:
        - name: dockerconfigjson-github
      containers:
        - name: template
          image: ghcr.io/cschmatzler/liveview-template:23.5.7-115c8c4
          ports:
            - name: http
              protocol: TCP
              containerPort: 4000
