k8s/workloads/default/template/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: template
  labels:
    app.kubernetes.io/name: template
    app.kubernetes.io/part-of: template
    grafana-agent/collect-metrics: "true"
    grafana-agent/collect-logs: "true"
spec:
  selector:
    app.kubernetes.io/name: template
    app.kubernetes.io/part-of: template
  ports:
    - name: http
      protocol: TCP
      port: 4000
      targetPort: http
