k8s/workloads/default/template/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: template
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/force-ssl-redirect: "true"
    projectcontour.io/websocket-routes: /
spec:
  ingressClassName: public
  rules:
    - host: &host liveview-template.app
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: template
                port:
                  name: http
  tls:
    - secretName: template-tls
      hosts:
        - *host
